# generate-kinds

./: Cargo.toml
generate-kinds/: Cargo.toml  README.md
generate-kinds-derive/: Cargo.toml
generate-kinds-derive/tests/: norm_tests.rs
generate-kinds/src/: lib.rs
generate-kinds/tests/: norm_tests.rs
get-kinds/: Cargo.toml  README.md
get-kinds/src/: lib.rs
