[package]
name = "generate-kinds"
version = "2.0.0"
edition = "2021"
description = "A macro to generate a kinds function for a given enum"
license = "BSD-3-Clause"
repository = "https://github.com/FerrisWasTaken/generate-kinds"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.36"
syn = { version = "2.0.63", features = ["full"] }

[lib]
proc-macro = true

[dev-dependencies]
get-kinds = {path = "../get-kinds"}